fix(RPNG): Increase subtedly of affordance
This make the affordances on `CodeChunks` and `CodeExpressions` in RNGs much more subtle, showing only a green dot in the top left corner (middle left for expressions) and reducing whitespace around them. The intent is to create images that are close to those that will appear in a published article but with an indicator that something can be done with them.

In the furture we might use a red square instead for code elements that have an error on them.

--- a/src/themes/rpng/styles.css
+++ b/src/themes/rpng/styles.css
@@ -3,9 +3,7 @@
 /* stylelint-disable scale-unlimited/declaration-strict-value */
 
 :--root {
-  --color-neutral-100: #f7fafc;
-  --color-neutral-300: #e2e8f0;
-  --color-neutral-600: #666;
+  --color-ok: #6dfc6e;
 
   display: inline-block;
   font-family: monospace;
@@ -17,73 +15,61 @@
 
 :--CodeChunk,
 :--CodeExpression {
+  /* For rPNG generation there should be no margin
+  and thet should have a minimum size. */
   display: inline-block;
-  background: var(--color-neutral-100);
-  border: 1px solid var(--color-neutral-300);
-  border-radius: 0.25rem;
+  margin: 0 !important;
   min-width: 1em;
   min-height: 1em;
   width: auto !important;
 
-  stencila-action-menu,
-  [slot='text'] {
-    display: none;
-  }
-
-  stencila-node-list {
-    width: 100%;
-  }
-
+  /* Remove borders and add a green dot affordance */
+  border: none;
   &::before {
-    content: 'code';
-    color: transparent;
-    height: 2em;
-    position: relative;
-    left: 0.5em;
-    font-size: 0.8rem;
-    line-height: 1.5;
-    text-transform: uppercase;
-    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none' stroke='rgb(29, 100, 243)' stroke-width='2' stroke-linecap='round' stroke-linejoin='round' class='feather feather-code'%3E%3Cpolyline points='16 18 22 12 16 6'/%3E%3Cpolyline points='8 6 2 12 8 18'/%3E%3C/svg%3E");
-    background-repeat: no-repeat;
-    background-size: contain;
-    z-index: 10;
+      position: absolute;
+      border-radius: 50%;
+      width: 12px;
+      height: 12px;
+      content: '';
+      background-color: var(--color-ok);
+      opacity: 0.7;
+      pointer-events: none;
   }
 }
 
-:--CodeChunk [slot='outputs'] {
-  margin: 1em;
+/* Add spacing between the dot and the output */
+:--CodeChunk stencila-node-list {
+  padding: 12px !important;
+}
+:--CodeExpression .output {
+  padding: 0 0 0 15px !important;
 }
 
-:--CodeChunk [slot='outputs'] * {
-  margin: 1em auto;
-}
-
-:--CodeChunk::before {
-  display: block;
-  height: 16px;
-  left: 0.5rem;
-  margin-bottom: 0.75rem;
-  top: 0.375rem;
-  width: 16px;
-}
-
-:--CodeChunk .editorContainer {
-  width: 100%;
-}
-
+/* Hide the UI chrome etc that is not wanted */
+:--CodeChunk stencila-action-menu,
+:--CodeChunk [slot='text'],
+:--CodeChunk .emptyContentMessage,
 :--CodeExpression .actions,
 :--CodeExpression .divider {
   display: none !important;
 }
 
-:--CodeExpression [slot='output'] {
-  display: inline-block;
-  margin: 0.1em 0.5em 0.1em auto;
+/* Make font-size a little bigger for outputs */
+:--CodeChunk *,
+:--CodeExpression * {
+  font-size: 0.9rem !important;
 }
 
+/* Make display of datatables a little more pleasing */
 :--Datatable {
   border: 1px solid grey;
-  border-collapse: collapse;
+
+  table,
+  tr,
+  th,
+  td {
+    border-collapse: collapse;
+  }
 
   th {
     color: var(--color-neutral-600);
